3.1.7
	Fix wrong display of %Xc %Xe and %Xh substitutions 
	Fix documentation: %Xh instead of %Xr
3.1.6
	More format strings, for SMTP code, extended code, message, header
	Fix a crash when using regex without grouping ()
	Document the CVS location in README
3.1.5
	Fix double free when using content filtering
	ACL clauses can now be negated
	msg clauses in ACL can use format strings substitution
	Add an ACL clause to customize X-Greylist header
	Fix serious bugs in DNSRBL code (Jacques Beigbeder)
	Fix a display bug for netblocks
	Add a time clause to match against time sets
	GeoIP support, through the geoip clause
	Fix warning for Postfix build (Nerijus Baliunas)
	%g for substitution by regex back references
	%I for susbtitution by sender IP masked by a CIDR
	Allow specifying socket mode in config file
	Set default user to root for .spec file
	Do not drop root privs if we do not run as root
3.1.4
	Add support for switching to a given group (Ralf S. Engelschall)
	Add substitutions for sendmail macro and strftime in URL checks
	Add custom logs of milter-greylist actions, see stat in greylist.conf
	Fixes for running with Postfix (Nerijus Baliunas)
	Fix configure problem with DNSRBL on Linux (Andrew McGill)
	Document how to use milter-greylist with Postfix (Nerijus Baliunas)
	Update .spec for Postfix (Nerijus Baliunas)
	Optionnaly post the message body to an URL check at DATA stage
	Integrate SPF, SMTP AUTH and STARTTLS in ACL
	Add msgsize and rcptcount clauses to ACL
	Allow rcpt clause at DATA stage ACL
	Fix crashes when running with -D on some systems (John Thiltges)
	Do not sort the databases, it makes startup slow and buys nothing
3.1.3
	Fix various bugs (regex searches, lists matches, uninitialized memory)
3.1.2
	Fix timespamp on sparc64 (Gert Doering)
	Add the ability to query extrnal sources in ACL using URL 
	Add connexion pools for URL queries to enable persistent connexions
	Fix dependency in rc-bsd.sh: it's mail, not sendmail
	Add DATA-stage ACL